networkpolicy/networkpolicy__basic_kafka_setup__postgresql__from__strimzi__ingress__ports__5432__nr34__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgresql--from--strimzi--ingress--ports--5432--nr34
  namespace: postgresql
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: strimzi
    ports:
    - protocol: TCP
      port: 5432
